@@ -63,7 +63,7 @@ class ForumsHtmlSearchRenderer extends HtmlGroupSearchRenderer {
 			}
 			$return .= '<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($rowColor) .'>'
 						. '<td width="5%">&nbsp;</td>'
-						. '<td><a href="'.$GLOBALS['sys_urlprefix'].'/forum/message.php?msg_id='. db_result($result, $i, 'msg_id').'">'
+						. '<td><a href="'.util_make_url ('/forum/message.php?msg_id='. db_result($result, $i, 'msg_id')).'">'
 							. html_image('ic/msg.png', '10', '12', array('border' => '0')).' '.db_result($result, $i, 'subject')
 							.'</a></td>'			
 						. '<td width="15%">'.db_result($result, $i, 'realname').'</td>'
