@@ -52,7 +52,7 @@ class NewsHtmlSearchRenderer extends HtmlGroupSearchRenderer {
 		$return = '';
 		for($i = 0; $i < $rowsCount; $i++) {
 			$return .= '<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($i) .'>'
-				. '<td><a href="'.$GLOBALS['sys_urlprefix'].'/forum/forum.php?forum_id='. db_result($result, $i, 'forum_id').'">'
+				. '<td><a href="'.util_make_url ('/forum/forum.php?forum_id='. db_result($result, $i, 'forum_id')).'">'
 				. html_image('ic/msg.png', '10', '12', array('border' => '0'))
 				. ' '.db_result($result, $i, 'summary').'</a></td>
 				<td width="15%">'.db_result($result, $i, 'realname').'</td>
